cabal-version:      3.0
name:               ages
version:            0.1.0.0
synopsis:

homepage:

license:            MIT
license-file:       LICENSE
author:             goosedb
maintainer:         goosedb@yandex.ru

category:           Data
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Data.Time.Ages, 
                      Data.Time.Ages.Pretty, 
                      Data.Time.Ages.Time, 
                      Data.Time.Ages.Internal

    build-depends:    base, time
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall

test-suite test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base, hspec, ages, hspec-expectations
